yiltc-v0.2-backup/testsuite/negative/enum_payload_on_simple.yilt
// Negative test: providing payload to a simple (no-payload) variant

enum Color
    Red
    Green
    Blue

pub fn main()
    let c = Color.Red(42)
    print(c)
